kubernetes/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: grafana
      targetPort: http
  selector:
    app.kubernetes.io/name: grafana
