kubernetes/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: galah-monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            pathType: Prefix
            path: "/grafana"
